grammar.js
    source_file: $ => choice(
      block($, $._declaration),
      repeat(seq($._declaration, choice($._newline, ';'))),
    ),


    // //////////////////////////////////////////////////////////////////////
    // Constants
    // //////////////////////////////////////////////////////////////////////

    _FORALL: _ => choice('forall', '∀'),
    _ARROW: _ => choice('->', '→'),
    _LAMBDA: _ => choice(token(prec(-1, '\\')), 'λ'),
    _ELLIPSIS: _ => choice('...', '…'),

    // //////////////////////////////////////////////////////////////////////
    // Top-level Declarations
    // //////////////////////////////////////////////////////////////////////

    _declaration_block: $ => block($, $._declaration),

    _declaration: $ => choice(
      $.fields,
      $.function,
      $.data,
      $.data_signature,
      $.record,
      $.record_signature,
      $.infix,
      $.generalize,
      $.mutual,
      $.interleaved_mutual,
      $.abstract,
      $.private,
      $.instance,
      $.macro,
      $.postulate,
      $.primitive,
      $.open,
      alias($._import_declaration, $.import),
      $.module_macro,
      $.module,
      $.pragma,
      $.syntax,
      $.pattern,
      $.unquote_decl,
      $.opaque,
    ),

    // //////////////////////////////////////////////////////////////////////
    // Declaration: Field
    // //////////////////////////////////////////////////////////////////////

    fields: $ => seq(
      'field',
      optional($._signature_block),
    ),

    _signature_block: $ => block($, $.signature),

    signature: $ => choice(
      seq(
        optional('overlap'),
        $._modal_arg_ids,
        ':',
        $.expr,
      ),
      // Instance field signatures `{{name}} : Type` are spelled out here so that
      // '{{' / '⦃' are direct first-tokens of this state. The brace_double inside
      // _arg_id doesn't propagate its '{{' first-token through the inline-rule
      // chain, so without these the lexer consumes only a single '{' and the
      // second '}' becomes an ERROR node.
      prec(1, seq('{{', $._maybe_dotted_ids, '}}', ':', $.expr)),
      prec(1, seq('⦃', $._maybe_dotted_ids, '⦄', ':', $.expr)),
      seq(
        'instance',
        $._signature_block,
      ),
    ),

    _modal_arg_ids: $ => seq(repeat($.attribute), $._arg_ids),

    // //////////////////////////////////////////////////////////////////////
    // Declaration: Functions
    // //////////////////////////////////////////////////////////////////////

    // Split into two alternatives — declaration (`:`) and definition (`=`) — only
    // so the declaration's LHS can be aliased to `function_name`.
    function: $ => choice(
      seq(
        optional($.attributes),
        alias($.lhs_decl, $.lhs),
        alias(optional($.rhs_decl), $.rhs),
        optional($.where),
      ),
      seq(
        optional($.attributes),
        alias($.lhs_defn, $.lhs),
        alias(optional($.rhs_defn), $.rhs),
        optional($.where),
      ),
    ),

    // The rewrite / using / with clauses on an LHS may chain freely, e.g.
    // `f x rewrite p with r using s ← e = body`.
    with_expressions: $ => seq(
      'with',
      $.expr,
      optional(seq('in', $.id)),
      repeat(seq('|', $.expr, optional(seq('in', $.id)))),
    ),

    _LEFTARROW: _ => choice('<-', '←'),

    where: $ => seq(
      optional(seq(
        'module',
        optional($.attributes),
        $.bid,
      )),
      'where',
      optional(choice($._declaration_block, $._declaration)),
    ),

    // //////////////////////////////////////////////////////////////////////
    // Declaration: Data
    // //////////////////////////////////////////////////////////////////////

    data_name: $ => alias(choice($.id, '_'), 'data_name'),

    data: $ => seq(
      choice('data', 'codata'),
      optional($.attributes),
      $.data_name,
      optional($._typed_untyped_bindings),
      optional(seq(':', $.expr)),
      'where',
      optional(choice($._declaration_block, $._declaration)),
    ),

    // //////////////////////////////////////////////////////////////////////
    // Declaration: Data Signature
    // //////////////////////////////////////////////////////////////////////

    data_signature: $ => seq(
      'data',
      optional($.attributes),
      $.data_name,
      optional($._typed_untyped_bindings),
      ':',
      $.expr,
    ),

    // //////////////////////////////////////////////////////////////////////
    // Declaration: Record
    // //////////////////////////////////////////////////////////////////////

    record: $ => seq(
      'record',
      optional($.attributes),
      alias($._atom_no_curly, $.record_name),
      optional($._typed_untyped_bindings),
      optional(seq(':', $.expr)),
      $.record_declarations_block,
    ),

    record_declarations_block: $ => seq(
      'where',
      optional(indent($,
        // Directives, one or more per line; `;` may separate them on a single line
        // and may also separate a trailing directive from a declaration. Once a
        // declaration appears, the rest of the `;`-list are declarations.
        repeat(seq(
          $._record_directive,
          repeat(seq(';', choice($._record_directive, $._declaration))),
          $._newline,
        )),
        repeat(seq($._declaration, choice($._newline, ';'))),
      )),
    ),

    _record_directive: $ => choice(
      $.record_constructor,
      $.record_constructor_instance,
      $.record_induction,
      $.record_eta,
      $.record_pattern,
    ),
    infix: $ => seq(
      $.fixity,
      repeat1($.bid),
    ),

    // //////////////////////////////////////////////////////////////////////
    // Declaration: Generalize
    // //////////////////////////////////////////////////////////////////////

    interleaved_mutual: $ => seq(
      'interleaved',
      'mutual',
      optional(choice($._declaration_block, $._declaration)),
    ),

    // //////////////////////////////////////////////////////////////////////
    // Declaration: Opaque / Unfolding
    // //////////////////////////////////////////////////////////////////////

    postulate: $ => seq(
      'postulate',
      optional(choice($._declaration_block, $._declaration)),
    ),

    // //////////////////////////////////////////////////////////////////////
    // Declaration: Primitive
    // //////////////////////////////////////////////////////////////////////

    open: $ => seq(
      'open',
      choice(
        seq($.import, optional($._atoms), optional($.as_clause)),
        seq($.module_name, optional($._atoms)),
      ),
      optional($._import_directives),
    ),

    import: $ => seq('import', $.module_name),

    // Top-level `import M args` is rejected by Agda as "useless" unless renamed, so
    // an `as`-clause is required when args are present. `as` always comes after the
    // args and before any directives.
    module_name: $ => $._qid,

    _import_directives: $ => repeat1($.import_directive),
    import_directive: $ => choice(
      'public',
      seq('using', '(', $._comma_import_names, ')'),
      seq('hiding', '(', $._comma_import_names, ')'),
      seq('renaming', '(', sepR(';', $.renaming), ')'),
      seq('using', '(', ')'),
      seq('hiding', '(', ')'),
      seq('renaming', '(', ')'),
    ),

    _comma_import_names: $ => sepR(';', $._import_name),

    fixity: $ => seq(
      choice('infix', 'infixl', 'infixr'),
      alias(token(/\-?[0-9]+(\.[0-9]+)?/), $.integer),
    ),

    module_macro: $ => seq(
      choice(
        seq('module', optional($.attributes), alias($._qid, $.module_name)),
        seq('open', 'module', optional($.attributes), alias($._qid, $.module_name)),
      ),
      optional($._typed_untyped_bindings),
      '=',
      $.module_application,
      repeat($.import_directive),
    ),

    module_application: $ => seq(
      $.module_name,
      choice(
        prec(1, brace_double($._ELLIPSIS)),
        optional($._atoms),
      ),
    ),

    // //////////////////////////////////////////////////////////////////////
    // Declaration: Module
    // //////////////////////////////////////////////////////////////////////

    module: $ => seq(
      'module',
      optional($.attributes),
      alias(choice($._qid, '_'), $.module_name),
      optional($._typed_untyped_bindings),
      'where',
      optional(choice($._declaration_block, $._declaration)),
    ),

    // //////////////////////////////////////////////////////////////////////
    // Declaration: Pragma
    // //////////////////////////////////////////////////////////////////////

    // The pragma name is intentionally NOT validated (any content between `{-#`
    // and `#-}` is accepted) — Agda restricts it to a fixed, frequently-growing
    // list, and mirroring that here would be churn for little gain.
    pragma: _ => token(seq(
      '{-#',
      repeat(choice(
        // one level of nesting, so a FOREIGN GHC pragma can hold a nested
        // `{-# LANGUAGE … #-}`
        seq('{-#', repeat(choice(/[^#]/, /#[^-]/, /#\-[^}]/)), '#-}'),
        /[^#{]/,
        /\{[^-]/,
        /\{-[^#]/,
        /#[^-]/,
        /#\-[^}]/,
      )),
      '#-}',
    )),

    id: _ => /([^\s;\\.\"\(\)\{\}@\'\\_]|\\[^\sa-zA-Z\(\)\{\}]|_[^\s;\.\"\(\)\{\}@])[^\s;\.\"\(\)\{\}@]*/,

    // qualified identifier: http://wiki.portal.chalmers.se/agda/pmwiki.php?n=ReferenceManual.Names
    _qid: $ => prec.left(
      choice(
        // eslint-disable-next-line max-len
        alias(/(([^\s;\.\"\(\)\{\}@\'\\_]|\\[^\sa-zA-Z]|_[^\s;\.\"\(\)\{\}@])[^\s;\.\"\(\)\{\}@]*\.)+([^\s;\.\"\(\)\{\}@\'\\_]|\\[^\sa-zA-Z]|_[^\s;\.\"\(\)\{\}@])[^\s;\.\"\(\)\{\}@]*/, $.qid),
        alias($.id, $.qid),
      ),
    ),

    bid: $ => alias(choice('_', $.id), 'bid'),

    _maybe_dotted_ids: $ => repeat1($._maybe_dotted_id),

    _binding_ids_and_absurds: $ => choice(
      $._application,
      prec(-1, seq($._qid, '=', $._qid)),
      prec(-1, seq($._qid, '=', '_')),
    ),

    attribute: $ => seq('@', choice($._expr_or_attr, 'rewrite')),
    attributes: $ => repeat1($.attribute),

    // //////////////////////////////////////////////////////////////////////
    // Expressions (terms and types)
    // //////////////////////////////////////////////////////////////////////

    expr: $ => choice(
      seq($._typed_bindings, $._ARROW, $.expr),
      seq(optional($.attributes), $._atoms, $._ARROW, $.expr),
      seq($._with_exprs, '=', $.expr),
      prec(-1, $._with_exprs),
    ),
    stmt: $ => choice(
      seq($._typed_bindings, $._ARROW, $.expr),
      seq(optional($.attributes), $._atoms, $._ARROW, $.expr),
      seq($._with_exprs, '=', $.expr),
      seq(
        field('pattern', $._with_exprs),
        $._LEFTARROW,
        field('rhs', $.expr),
      ),
      prec(-1, $._with_exprs_stmt),
    ),

    _with_exprs: $ => seq(
      repeat(seq($._atoms, '|')),
      $._application,
    ),
    _with_exprs_stmt: $ => seq(
      repeat(seq($._atoms, '|')),
      $._application_stmt,
    ),

    _expr_or_attr: $ => choice(
      $.literal,
      $._qid,
      paren($.expr),
    ),

    _application: $ => seq(
      optional($._atoms),
      $._expr2,
    ),
    atom: $ => choice(
      $._atom_curly,
      $._atom_no_curly,
    ),
    _atoms: $ => repeat1($.atom),

    // As-pattern `x@p` (Agda's `As` constructor, Parser.y `Id '@' Expr3`).
    _atom_curly: $ => brace(optional($.expr)),

    _atom_no_curly: $ => choice(
      '_',
      '?',
      $.SetN,
      'quote',
      'quoteTerm',
      'quoteContext',
      'unquote',
      $.PropN,
      brace_double($.expr),
      seq($._open_idiom, optional($.expr), '|)'),
      seq('⦇', optional($.expr), '⦈'),
      $._empty_idiom,
      $.hole,
      seq('(', ')'),
      seq('{{', '}}'),
      seq('⦃', '⦄'),
      $.as_pattern,
      seq('.', paren($.attributes, $.atom)),
      seq('.', $.atom),
      seq('..', $.atom),
      $.record_assignments,
      alias($.field_assignments, $.record_assignments),
      alias($.record_where_named, $.record_assignments),
      $.record_where_expr,
      $._ELLIPSIS,
      $._expr_or_attr,
    ),

    forall: $ => seq($._FORALL, $._typed_untyped_bindings, $._ARROW, $.expr),

    // The block-closing `$._dedent` sits BEFORE the optional `in`-body, matching
    // Agda's `vclose` position in `Expr2 : 'let' Declarations LetBody`. The scanner
    // emits one unified `_dedent`, driven by column-offside or by `in`/`)`/`}`
    // lookahead (emulating Agda's `error{%popBlock}`). Consuming the close right
    // after the declarations stops it drifting past the body and stealing an
    // enclosing block's DEDENT.
    let: $ => prec.right(seq(
      'let',
      optional(choice($._indent, $._let_indent)),
      repeat(seq($._declaration, choice($._newline, ';'))),
      $._declaration,
      optional(choice($._newline, ';')),
      optional($._dedent),
      $._let_body,
    )),

    // As `let`, but the `in`-body is optional (a `let` may be a do-statement alone).
    _let_body: $ => seq(
      'in',
      $.expr,
    ),

    // prec.dynamic(1): when both `lambda` and `lambda_extended_or_absurd` accept
    // the same tokens (e.g. `λ {b} hb → body` inside `let…in (…)`), prefer this
    // binding form over the clause form.
    lambda: $ => prec.dynamic(1, seq(
      $._LAMBDA,
      optional($.attributes),
      $._lambda_bindings,
      $._ARROW,
      $.expr,
    )),

    // Bindings for `λ … → e`. A trailing empty-bracket (absurd) pattern is NOT
    // allowed here — an absurd binding can't be followed by a body — so that case
    // lives in `lambda_extended_or_absurd` / `_absurd_lambda_bindings` instead.
    _lambda_bindings: $ => repeat1($._typed_untyped_binding),

    lambda_clause: $ => seq(
      optional($.catchall_pragma),
      optional($._atoms),
      $._ARROW,
      $.expr,
    ),

    do: $ => seq('do',
      seq(
        choice($._indent, $._do_indent),
        repeat1(seq($._do_stmt, choice($._newline, ';'))),
        $._dedent,
      ),
    ),

    _do_stmt: $ => seq(
      $.stmt,
      optional($.do_where),
    ),

    record_assignments: $ => seq(
      'record',
      brace(optional($._record_assignments)),
    ),

    _record_assignments: $ => seq(
      repeat(seq($._record_assignment, ';')),
      $._record_assignment,
    ),


    field_assignment: $ => choice(
      seq(alias($.id, $.field_name), '=', $.expr),
      seq('.', alias($.id, $.field_name), $._ARROW, $.expr),
    ),

    _typed_bindings: $ => repeat1($.typed_binding),
    typed_binding: $ => choice(
      maybeDotted(choice(
        paren($._application, ':', $.expr),
        brace($._binding_ids_and_absurds, ':', $.expr),
        brace_double($._binding_ids_and_absurds, ':', $.expr),
        brace($.attributes, $._binding_ids_and_absurds, ':', $.expr),
        brace_double($.attributes, $._binding_ids_and_absurds, ':', $.expr),
      )),
      paren($.attributes, $._application, ':', $.expr),
      brace($.attributes, $._binding_ids_and_absurds, ':', $.expr),
      brace_double($.attributes, $._binding_ids_and_absurds, ':', $.expr),
      paren($.open),
      paren(seq(
        'let',
        optional($._indent),
        repeat(seq($._declaration, choice($._newline, ';'))),
        $._declaration,
        optional(choice($._newline, ';')),
        optional($._dedent),
      )),
    ),

    _typed_untyped_bindings: $ => repeat1($._typed_untyped_binding),
    integer: _ => integer,
    // The string-gap alternative `\<whitespace>+\` (Haskell-style line
    // continuation, may span newlines) must precede `\\.` because `.` doesn't
    // match a newline.
    string: _ => /\"([^\"\\]|\\[ \t\r\n]+\\|\\.)*\"/,
    literal: $ => choice(
      integer,
      $.string,
      $.char,
    ),

    comment: _ => token(prec(100, seq('--', /[^\n]*/))),
