test/corpus/declaration/comment.txt
==================
Block comment with double-dash before closing delimiter
==================

{-- postulate
--}
module M where

---

(source_file
  (block_comment)
  (module
    (module_name (qid))))

==================
Block comment containing pragma
==================

{-
{-# OPTIONS --allow-unsolved-metas #-}
-}
module M where

---

(source_file
  (block_comment)
  (module
    (module_name (qid))))

==================
Block comment containing multiple pragmas
==================

{- {-# OPTIONS --foo #-} and {-# OPTIONS --bar #-} -}
module N where

---

(source_file
  (block_comment)
  (module
    (module_name (qid))))

==================
Line comment containing supplementary Unicode character
==================

module M where
-- 𝒞 is a category

---

(source_file
  (module
    (module_name (qid)))
  (comment))
