test/corpus/declaration/data.txt
==================
Simple
==================

data Nat : Set where
    zero : Nat
    succ : Nat -> Nat

---

(source_file
    (data
        (data_name) (expr (atom (SetN)))
        (function
            (lhs (function_name (atom (qid))))
            (rhs
                (expr (atom (qid)))))
        (function
            (lhs (function_name (atom (qid))))
            (rhs
                (expr
                    (atom (qid))
                    (expr (atom (qid))))))))

==================
Without body
==================

data Nat : Set where

data Bool : Set where

---

(source_file
    (data
      (data_name) (expr (atom (SetN))))
    (data
      (data_name) (expr (atom (SetN)))))

==================
Anonymous data in interleaved mutual
==================

interleaved mutual
  data Even : Nat → Set
  data Odd  : Nat → Set
  data _ where
    even-zero : Even zero

---

(source_file
  (interleaved_mutual
    (data_signature
      (data_name)
      (expr (atom (qid)) (expr (atom (SetN)))))
    (data_signature
      (data_name)
      (expr (atom (qid)) (expr (atom (SetN)))))
    (data
      (data_name)
      (function
        (lhs (function_name (atom (qid))))
        (rhs (expr (atom (qid)) (atom (qid))))))))

==================
Erased data type (@0)
==================

data @0 D : Set where

---

(source_file
  (data
    (attributes (attribute (qid)))
    (data_name)
    (expr (atom (SetN)))))

==================
Erased data signature (@0)
==================

data @0 D : Set

---

(source_file
  (data_signature
    (attributes (attribute (qid)))
    (data_name)
    (expr (atom (SetN)))))
