test/corpus/declaration/infix.txt
==================
Fractional fixity precedence
==================

infix -3.14 _+_

---

(source_file
  (infix
    (fixity
      (integer))
    (bid)))

==================
Infix
==================

infix 3 _+_
infixl 4 _*_
infixr 5 _-_ _-_

---

(source_file
  (infix
    (fixity
      (integer))
    (bid))
  (infix
    (fixity
      (integer))
    (bid))
  (infix
    (fixity
      (integer))
    (bid)
    (bid)))
